--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context="kh618.statisticscs.HomeScreen">
 
-  <ListView
+  <android.support.v7.widget.RecyclerView
       android:id="@+id/ListShow"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       android:divider="@color/textColor"
       />
 
