--- a/app/src/main/res/layout/subject_list.xml
+++ b/app/src/main/res/layout/subject_list.xml
@@ -7,13 +7,12 @@
     card_view:cardUseCompatPadding="true"
     card_view:cardElevation="10dp"
     card_view:contentPadding="10dp"
-    card_view:cardBackgroundColor="@color/redLight"
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/DarkBlue"
+        android:background="@color/textColor"
         android:padding="15dp">
         <TextView
             android:layout_width="match_parent"
@@ -25,6 +24,7 @@
             android:id="@+id/subName"
             android:textSize="30sp"
             android:layout_margin="2dp"
+            android:textColor="@color/DarkBlue"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -34,12 +34,14 @@
             android:textSize="22sp"
             android:layout_margin="2dp"
             android:id="@+id/subType"
+            android:textColor="@color/DarkBlue"
             android:textStyle="italic"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date"
             android:id="@+id/subDate"
+            android:textColor="@color/DarkBlue"
             android:layout_gravity="center"
             android:layout_margin="2dp"
             android:textSize="16sp"
@@ -47,12 +49,12 @@
 
         <Button
             android:id="@+id/download"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/button"
+            android:textColor="@color/textColor"
             android:text="DOWNLOAD"
-            android:textColor="@android:color/white"
             android:textStyle="bold"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
